--- a/Python/Body_Ros/package.xml
+++ b/Python/Body_Ros/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>body_detection</name>
+  <name>frost_body</name>
   <version>0.0.0</version>
   <description>body_detection package</description>
 
