--- a/Python/Processor_Ros/CMakeLists.txt
+++ b/Python/Processor_Ros/CMakeLists.txt
@@ -45,12 +45,12 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-#add_message_files(
-#    FILES
-#    Polar.msg
-#    Polar_Array.msg
+add_message_files(
+    FILES
+    Target.msg
+    Target_Array.msg
 #   Message2.msg
-#)
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
